--- a/packages/drawer/src/mwc-drawer.scss
+++ b/packages/drawer/src/mwc-drawer.scss
@@ -16,3 +16,5 @@ limitations under the License.
 */
 
 @import '@material/drawer/mdc-drawer.scss';
+@import '@material/drawer/modal/mdc-drawer-modal.scss';
+@import '@material/drawer/dismissible/mdc-drawer-dismissible.scss';
