Tabs: more demos

--- a/packages/tab-bar/src/mwc-tab-bar.scss
+++ b/packages/tab-bar/src/mwc-tab-bar.scss
@@ -16,3 +16,11 @@ limitations under the License.
 */
 
 @import '@material/tab-bar/mdc-tab-bar.scss';
+
+:host {
+  display: flex;
+}
+
+.mdc-tab-bar {
+  flex: 1;
+}
