--- a/packages/tab-indicator/src/mwc-tab-indicator.scss
+++ b/packages/tab-indicator/src/mwc-tab-indicator.scss
@@ -16,3 +16,8 @@ limitations under the License.
 */
 
 @import '@material/tab-indicator/mdc-tab-indicator.scss';
+@import "@material/mwc-icon/src/_mwc-icon.scss";
+
+.material-icons {
+  @extend %material-icons;
+}
