Rewrite formfield as typescript
- Implement `ripple` getter on formable components for activation of
ripple directive
- Improve watcher output

--- a/packages/formfield/src/mwc-formfield.scss
+++ b/packages/formfield/src/mwc-formfield.scss
@@ -16,3 +16,19 @@ limitations under the License.
 */
 
 @import '@material/form-field/mdc-form-field.scss';
+
+.mdc-form-field {
+  align-items: center;
+}
+
+::slotted(*) {
+  @include mdc-typography(body2);
+  @include mdc-theme-prop(color, text-primary-on-background);
+}
+
+::slotted(mwc-switch) {
+  margin-right: 10px;
+  @include mdc-rtl {
+    margin-left: 10px;
+  }
+}
