TabBar: RTL support

--- a/packages/tab/src/mwc-tab.scss
+++ b/packages/tab/src/mwc-tab.scss
@@ -37,3 +37,22 @@ limitations under the License.
 .mdc-tab::-moz-focus-inner {
   border: 0;
 }
+
+@mixin mdc-rtl($root-selector: null) {
+  @if ($root-selector) {
+    @at-root {
+      #{$root-selector}[dir="rtl"] &,
+      [dir="rtl"] #{$root-selector} & {
+        @content;
+      }
+    }
+  } @else {
+    :host([dir="rtl"]) & {
+      @content;
+    }
+  }
+}
+
+.mdc-tab:not(.mdc-tab--stacked) .mdc-tab__icon + .mdc-tab__text-label {
+  @include mdc-rtl-reflexive-box(padding, left, 8px);
+}
