--- a/packages/tab/src/mwc-tab.scss
+++ b/packages/tab/src/mwc-tab.scss
@@ -38,6 +38,7 @@ limitations under the License.
   border: 0;
 }
 
+/* Override mixin from mdc-tab to select for dir="rtl" on host rather than ancestor. */
 @mixin mdc-rtl($root-selector: null) {
   @if ($root-selector) {
     @at-root {
@@ -53,6 +54,7 @@ limitations under the License.
   }
 }
 
+/* Declare rule from mdc-tab again to pick up mixin override. */
 .mdc-tab:not(.mdc-tab--stacked) .mdc-tab__icon + .mdc-tab__text-label {
   @include mdc-rtl-reflexive-box(padding, left, 8px);
 }
