--- a/packages/drawer/src/mwc-drawer.scss
+++ b/packages/drawer/src/mwc-drawer.scss
@@ -18,10 +18,10 @@ limitations under the License.
 @import '@material/drawer/mdc-drawer.scss';
 
 .mdc-drawer-app-content {
-  flex: auto;
   overflow: auto;
 }
 
 :host {
   display: flex;
+  height: 100%;
 }
