Add missing semicolon and standardize SASS import quote style
PiperOrigin-RevId: 258412625

--- a/packages/tab-indicator/src/mwc-tab-indicator.scss
+++ b/packages/tab-indicator/src/mwc-tab-indicator.scss
@@ -16,7 +16,7 @@ limitations under the License.
 */
 
 @import '@material/tab-indicator/mdc-tab-indicator.scss';
-@import "@material/mwc-icon/src/_mwc-icon.scss";
+@import '@material/mwc-icon/src/_mwc-icon.scss';
 
 .material-icons {
   @extend %material-icons;
