--- a/packages/icon/src/mwc-icon-host.scss
+++ b/packages/icon/src/mwc-icon-host.scss
@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 */
-@import "./_mwc-icon.scss";
+@import './_mwc-icon.scss';
 
 :host {
   @extend %material-icons;
