Fix <mwc-tab-bar> layout issue in Firefox.

--- a/packages/tab-bar/src/mwc-tab-bar.scss
+++ b/packages/tab-bar/src/mwc-tab-bar.scss
@@ -18,7 +18,7 @@ limitations under the License.
 @import '@material/tab-bar/mdc-tab-bar.scss';
 
 :host {
-  display: flex;
+  display: block;
 }
 
 .mdc-tab-bar {
