Fix IE11 icon rendering in <mwc-icon>
IE11 requires font-feature-settings: 'liga' to be turned on to render
ligatures.

I also synchronized this styling generally to exactly match the
recommendations at
https://google.github.io/material-design-icons/#icon-images-for-the-web

--- a/packages/icon/src/_mwc-icon.scss
+++ b/packages/icon/src/_mwc-icon.scss
@@ -26,6 +26,13 @@ limitations under the License.
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
-  -webkit-font-feature-settings: 'liga';
+
+  /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
