New README for mwc-fab.
Also updates all demos to load the correct Roboto font widths, and
updates the FAB demo to match the examples in the README.

--- a/demos/demo-component.css
+++ b/demos/demo-component.css
@@ -1,4 +1,4 @@
-@import "https://fonts.googleapis.com/css?family=Roboto|Material+Icons";
+@import "https://fonts.googleapis.com/css?family=Roboto:300,500,600|Material+Icons";
 
 body {
   font-family: Roboto, sans-serif;
