Better readme for button
Related #348

--- a/packages/button/src/mwc-button.scss
+++ b/packages/button/src/mwc-button.scss
@@ -23,14 +23,10 @@ limitations under the License.
 }
 
 :host {
-  display: inline-flex;
+  display: inline-block;
   outline: none;
 }
 
 :host([disabled]) {
   pointer-events: none;
-}
-
-.mdc-button {
-  flex: auto;
 }
