--- a/packages/textarea/src/mwc-textarea.scss
+++ b/packages/textarea/src/mwc-textarea.scss
@@ -16,3 +16,82 @@ limitations under the License.
 */
 
 @import '@material/mwc-textfield/src/mwc-textfield.scss';
+@import '@material/textfield/_mixins.scss';
+@import '@material/textfield/_variables.scss';
+
+.mdc-text-field:not(.mdc-text-field--outlined) {
+  border-bottom: 1px solid;
+  height: 100%;
+  width: 100%;
+
+  .mdc-line-ripple {
+    bottom: -1px;
+  }
+
+  &:not(.mdc-text-field--disabled) {
+    @include mdc-text-field-fill-color($mdc-text-field-background);
+
+    &:not(.mdc-text-field--invalid){
+      @include mdc-theme-prop(border-bottom-color, $mdc-text-field-bottom-line-idle);
+
+      &:hover {
+        @include mdc-theme-prop(border-bottom-color, $mdc-text-field-bottom-line-hover);
+      }
+    }
+
+    &.mdc-text-field--invalid {
+      @include mdc-theme-prop(border-bottom-color, (
+        varname: --mdc-theme-error,
+        fallback: $mdc-theme-error
+      ));
+    }
+
+    .mdc-floating-label.mdc-floating-label--float-above {
+      transform: translateY(-50%) scale(0.75);
+      font-size: initial;
+    }
+  }
+
+  &.mdc-text-field--disabled {
+    @include mdc-theme-prop(border-bottom-color, $mdc-text-field-disabled-border);
+  }
+
+  .mdc-text-field__input {
+    padding: 0 16px 0 16px;
+    margin: 20px 0 1px 0;
+  }
+
+  .mdc-text-field-character-counter + .mdc-text-field__input {
+    margin-bottom: 28px;
+  }
+
+  .mdc-floating-label {
+    top: 18px;
+    left: 16px;
+  }
+}
+
+.mdc-text-field.mdc-text-field--outlined {
+  .mdc-text-field__input {
+    margin-bottom: 14px;
+    padding-bottom: 0px;
+  }
+
+  .mdc-text-field-character-counter {
+    bottom: 14px;
+
+    &+.mdc-text-field__input {
+      margin-bottom: 41px;
+    }
+  }
+}
+
+.mdc-text-field__input {
+  -ms-overflow-style: none;
+  scrollbar-color: transparent transparent;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  resize: none;
+}
