--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -35,6 +35,8 @@ limitations under the License.
 
 .mdc-text-field {
   width: 100%;
+  height: 100%;
+
   @include mdc-theme-prop(border-radius, (
     varname: --mdc-text-field-filled-border-radius,
     fallback: mdc-shape-mask-radius(mdc-shape-prop-value(small), 1 1 0 0)
