--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -59,6 +59,10 @@ mwc-notched-outline {
   mwc-notched-outline {
     --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
   }
+
+  &+.mdc-text-field-helper-line .mdc-text-field-character-counter, .mdc-text-field__icon {
+    color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
+  }
 }
 
 .mdc-text-field--focused:not(.mdc-text-field--disabled) {
