Make inner button element stretch to width of host. (#408)
This regressed in the button README PR (https://github.com/material-components/material-components-web-components/pull/366).

Found because it broke our internal screenshot test which checks that
the button grows when the user sets host width.

--- a/packages/button/src/mwc-button.scss
+++ b/packages/button/src/mwc-button.scss
@@ -23,10 +23,14 @@ limitations under the License.
 }
 
 :host {
-  display: inline-block;
+  display: inline-flex;
   outline: none;
 }
 
 :host([disabled]) {
   pointer-events: none;
+}
+
+.mdc-button {
+  flex: auto;
 }
