Re-implement `centerTitle` for MWC Top App Bar
- Updated CHANGELOG
- Added screenshots
- Fixed `<mwc-top-app-bar centerTitlie dense prominent>` styling

--- a/packages/top-app-bar/src/mwc-top-app-bar.scss
+++ b/packages/top-app-bar/src/mwc-top-app-bar.scss
@@ -50,3 +50,22 @@ limitations under the License.
     transition: padding 150ms $mdc-animation-standard-curve-timing-function;
   }
 }
+
+// add support for centered title
+%centerPadding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.mdc-top-app-bar__section--align-center {
+  justify-content: center;
+
+  .mdc-top-app-bar__title {
+    @extend %centerPadding;
+  }
+}
+
+// dense & prominent theming needs a more specific override
+.mdc-top-app-bar--dense.mdc-top-app-bar--prominent .mdc-top-app-bar__section--align-center .mdc-top-app-bar__title {
+  @extend %centerPadding;
+}
