--- a/packages/top-app-bar/src/mwc-top-app-bar.scss
+++ b/packages/top-app-bar/src/mwc-top-app-bar.scss
@@ -52,7 +52,7 @@ limitations under the License.
 }
 
 // add support for centered title
-%centerPadding {
+@mixin centerPadding {
   padding-left: 0;
   padding-right: 0;
 }
@@ -61,11 +61,11 @@ limitations under the License.
   justify-content: center;
 
   .mdc-top-app-bar__title {
-    @extend %centerPadding;
+    @include centerPadding();
   }
 }
 
 // dense & prominent theming needs a more specific override
 .mdc-top-app-bar--dense.mdc-top-app-bar--prominent .mdc-top-app-bar__section--align-center .mdc-top-app-bar__title {
-  @extend %centerPadding;
+  @include centerPadding();
 }
