--- a/packages/top-app-bar/src/mwc-top-app-bar.scss
+++ b/packages/top-app-bar/src/mwc-top-app-bar.scss
@@ -65,6 +65,15 @@ limitations under the License.
   }
 }
 
+.center-title {
+  // set flex-basis of other sections to 0 to force title to be always centered
+  // NOTE: this may cause overlapping on very small sizes
+  .mdc-top-app-bar__section--align-start,
+  .mdc-top-app-bar__section--align-end {
+    flex-basis: 0;
+  }
+}
+
 // dense & prominent theming needs a more specific override
 .mdc-top-app-bar--dense.mdc-top-app-bar--prominent .mdc-top-app-bar__section--align-center .mdc-top-app-bar__title {
   @include centerPadding();
