Fix internal build (#489)
upstreaming fixes from cl/267202399

--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -17,6 +17,10 @@ limitations under the License.
 
 @import '@material/textfield/mdc-text-field.scss';
 @import "@material/mwc-icon/src/_mwc-icon.scss";
+@import "@material/floating-label/mdc-floating-label";
+@import "@material/line-ripple/mdc-line-ripple";
+@import "@material/notched-outline/mdc-notched-outline";
+@import "@material/ripple/common";
 @import '@material/theme/_mixins.scss';
 @import '@material/shape/_functions.scss';
 
