--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -38,13 +38,14 @@ limitations under the License.
 }
 
 .mdc-text-field {
+  display: flex;
+
   width: 100%;
 
   @include mdc-theme-prop(border-radius, (
     varname: --mdc-text-field-filled-border-radius,
     fallback: mdc-shape-mask-radius(mdc-shape-prop-value(small), 1 1 0 0)
   ));
-
 }
 
 mwc-notched-outline {
@@ -79,7 +80,14 @@ mwc-notched-outline {
       --mdc-notched-outline-border-color: var(--mdc-text-field-focused-label-color, var(--mdc-theme-primary, #{$mdc-text-field-focused-label-color}));
     }
 
-    .mdc-floating-label, .mdc-floating-label::after {
+    .mdc-floating-label {
+      @include mdc-theme-prop(color, (
+        varname: --mdc-theme-primary,
+        fallback: $mdc-theme-primary
+      ));
+    }
+
+    @include mdc-required-text-field-label-asterisk_ {
       @include mdc-theme-prop(color, (
         varname: --mdc-theme-primary,
         fallback: $mdc-theme-primary
