--- a/packages/textarea/src/mwc-textarea.scss
+++ b/packages/textarea/src/mwc-textarea.scss
@@ -45,11 +45,11 @@ limitations under the License.
         fallback: $mdc-theme-error
       ));
     }
+  }
 
-    .mdc-floating-label.mdc-floating-label--float-above {
-      transform: translateY(-50%) scale(0.75);
-      font-size: initial;
-    }
+  .mdc-floating-label.mdc-floating-label--float-above {
+    transform: translateY(-50%) scale(0.75);
+    font-size: initial;
   }
 
   &.mdc-text-field--disabled {
@@ -75,6 +75,10 @@ limitations under the License.
   height: 100%;
 
   &.mdc-text-field--outlined {
+    &.mdc-text-field--disabled {
+      @include mdc-text-field-fill-color_(transparent);
+    }
+
     &:not(.mdc-text-field--fullwidth) {
       .mdc-text-field__input {
         margin-bottom: 14px;
