Fix outlined textfield notch when initially rendered hidden (#488)
fixes #444 by providing the mwc-textfied.layout() method.

In this PR:

added layout function
notch performs layout when label is changed
fixed hidden bug where foundation was being recreated too often
caused bug where changing maxLength caused foundation to unset invalid
had to pull logic out of foundation and into registerValidationAttributeHandler
The issue: when the label is floating and the element is outlined, but the label has no width, e.g.
mwc-textfield[outlined][label="something"][value="something"][hidden]

the mdc dataflow will calculate the size of the notch as zero. When hidden is removed, the notch will not update in size. Here we give them the layout method.

It is not possible to know when the textfield is changed from display: none to visible without setting a resize observer on the label. I wanted to avoid that because of possible render trashing and the overall heaviness of resizeObserver and a polyfill. Instead, it is up to the user to call layout when they change the visibility of the element.

--- a/packages/textarea/src/mwc-textarea.scss
+++ b/packages/textarea/src/mwc-textarea.scss
@@ -56,12 +56,12 @@ limitations under the License.
     @include mdc-theme-prop(border-bottom-color, $mdc-text-field-disabled-border);
   }
 
-  .mdc-text-field__input {
+  .mdc-text-field__input, .mdc-text-field-character-counter.hidden + .mdc-text-field__input {
     padding: 0 16px 0 16px;
     margin: 20px 0 1px 0;
   }
 
-  .mdc-text-field-character-counter + .mdc-text-field__input {
+  .mdc-text-field-character-counter:not(.hidden) + .mdc-text-field__input {
     margin-bottom: 28px;
   }
 
@@ -88,7 +88,7 @@ limitations under the License.
       .mdc-text-field-character-counter {
         bottom: 14px;
 
-        &+.mdc-text-field__input {
+        &:not(.hidden)+.mdc-text-field__input {
           margin-bottom: 41px;
         }
       }
