--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -28,6 +28,10 @@ limitations under the License.
   @extend %material-icons;
 }
 
+.hidden, .hidden::before, .hidden::after {
+  display: none;
+}
+
 :host {
   display: inline-block;
   outline: none;
