--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -60,43 +60,79 @@ mwc-notched-outline {
   --mdc-notched-outline-border-color: var(--mdc-text-field-outlined-hover-border-color, #{$mdc-text-field-outlined-hover-border});
 }
 
-:host([disabled]) mwc-notched-outline {
-  --mdc-notched-outline-border-color: var(--mdc-text-field-outlined-disabled-border-color, #{$mdc-text-field-outlined-disabled-border});
+:host(:not([disabled])) {
+  .mdc-text-field {
+    &:not(.mdc-text-field--outlined) {
+      background-color: var(--mdc-text-field-filled-fill-color, var(--mdc-text-field-fill-color, #{$mdc-text-field-background}));
+    }
+
+    &.mdc-text-field--outlined {
+      --mdc-notched-outline-background-color: var(--mdc-text-field-outlined-fill-color, var(--mdc-text-field-fill-color, transparent));
+    }
+
+    &.mdc-text-field--invalid {
+      --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
+
+      &+.mdc-text-field-helper-line .mdc-text-field-character-counter, .mdc-text-field__icon {
+        color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
+      }
+    }
+
+
+    &:not(.mdc-text-field--invalid):not(.mdc-text-field--focused) {
+      .mdc-floating-label, .mdc-floating-label::after {
+        color: var(--mdc-text-field-label-ink-color, #{$mdc-text-field-label});
+      }
+    }
+
+    &.mdc-text-field--focused {
+      mwc-notched-outline {
+        --mdc-notched-outline-stroke-width: 2px;
+      }
+
+      &:not(.mdc-text-field--invalid) {
+        mwc-notched-outline {
+          --mdc-notched-outline-border-color: var(--mdc-text-field-focused-label-color, var(--mdc-theme-primary, #{$mdc-text-field-focused-label-color}));
+        }
+
+        .mdc-floating-label {
+          @include mdc-theme-prop(color, primary);
+        }
+
+        @include mdc-required-text-field-label-asterisk_ {
+          @include mdc-theme-prop(color, primary);
+        }
+      }
+    }
+
+    .mdc-text-field__input {
+      color: var(--mdc-text-field-ink-color, #{$mdc-text-field-ink-color});
+    }
+  }
 }
 
-.mdc-text-field--invalid:not(.mdc-text-field--disabled) {
-  mwc-notched-outline {
-    --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
-  }
-
-  &+.mdc-text-field-helper-line .mdc-text-field-character-counter, .mdc-text-field__icon {
-    color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
-  }
-}
-
-.mdc-text-field--focused:not(.mdc-text-field--disabled) {
-  mwc-notched-outline {
-    --mdc-notched-outline-stroke-width: 2px;
-  }
-
-  &:not(.mdc-text-field--invalid) {
-    mwc-notched-outline {
-      --mdc-notched-outline-border-color: var(--mdc-text-field-focused-label-color, var(--mdc-theme-primary, #{$mdc-text-field-focused-label-color}));
+:host([disabled]) {
+  .mdc-text-field {
+    &:not(.mdc-text-field--outlined) {
+      background-color: var(--mdc-text-field-filled-disabled-fill-color, var(--mdc-text-field-disabled-fill-color, #{$mdc-text-field-disabled-background}));
     }
 
-    .mdc-floating-label {
-      @include mdc-theme-prop(color, (
-        varname: --mdc-theme-primary,
-        fallback: $mdc-theme-primary
-      ));
+    &.mdc-text-field--outlined {
+      --mdc-notched-outline-background-color: var(--mdc-text-field-outlined-disabled-fill-color, var(--mdc-text-field-disabled-fill-color, transparent));
+
+      mwc-notched-outline {
+        --mdc-notched-outline-border-color: var(--mdc-text-field-outlined-disabled-border-color, #{$mdc-text-field-outlined-disabled-border});
+      }
     }
 
-    @include mdc-required-text-field-label-asterisk_ {
-      @include mdc-theme-prop(color, (
-        varname: --mdc-theme-primary,
-        fallback: $mdc-theme-primary
-      ));
+    &:not(.mdc-text-field--invalid):not(.mdc-text-field--focused) {
+      .mdc-floating-label, .mdc-floating-label::after {
+        color: var(--mdc-text-field-disabled-ink-color, $mdc-text-field-disabled-ink-color);
+      }
+    }
+
+    .mdc-text-field__input {
+      color: var(--mdc-text-field-disabled-ink-color, $mdc-text-field-disabled-ink-color);
     }
   }
-
 }
