--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -66,7 +66,7 @@ mwc-notched-outline {
       background-color: var(--mdc-text-field-fill-color, #{$mdc-text-field-background});
     }
 
-    &.mdc-text-field--invalid {
+    &.mdc-text-field--invalid mwc-notched-outline {
       --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
 
       &+.mdc-text-field-helper-line .mdc-text-field-character-counter, .mdc-text-field__icon {
