--- a/packages/textfield/src/mwc-textfield.scss
+++ b/packages/textfield/src/mwc-textfield.scss
@@ -66,8 +66,10 @@ mwc-notched-outline {
       background-color: var(--mdc-text-field-fill-color, #{$mdc-text-field-background});
     }
 
-    &.mdc-text-field--invalid mwc-notched-outline {
-      --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
+    &.mdc-text-field--invalid {
+      mwc-notched-outline {
+        --mdc-notched-outline-border-color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
+      }
 
       &+.mdc-text-field-helper-line .mdc-text-field-character-counter, .mdc-text-field__icon {
         color: var(--mdc-text-field-error-color, var(--mdc-theme-error, #{$mdc-theme-error}));
