--- a/packages/snackbar/src/mwc-snackbar.scss
+++ b/packages/snackbar/src/mwc-snackbar.scss
@@ -15,6 +15,8 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 @import '@material/snackbar/mdc-snackbar.scss';
+@import '@material/feature-targeting/_mixins.scss';
+@import '@material/rtl/_mixins.scss';
 
 slot[name=action]::slotted(mwc-button) {
   --mdc-theme-primary: var(--mdc-snackbar-action-color, #{$mdc-snackbar-action-ink-color});
@@ -22,5 +24,12 @@ slot[name=action]::slotted(mwc-button) {
 
 slot[name=dismiss]::slotted(mwc-icon-button) {
   --mdc-icon-size: #{$mdc-snackbar-dismiss-icon-size};
+  --mdc-icon-button-size: #{$mdc-snackbar-dismiss-icon-size} * 2;
   color: #{$mdc-snackbar-dismiss-ink-color};
+
+  $query: mdc-feature-all();
+  $feat-structure: mdc-feature-create-target($query, structure);
+  @include mdc-feature-targets($feat-structure) {
+    @include mdc-rtl-reflexive-property(margin, $mdc-snackbar-padding, 0);
+  }
 }
