--- a/packages/radio/src/mwc-radio.scss
+++ b/packages/radio/src/mwc-radio.scss
@@ -20,6 +20,6 @@ limitations under the License.
 @include mdc-ripple-common(mdc-feature-all());
 
 :host {
-  display: inline-block;
+  display: inline-flex;
   outline: none;
 }
